tests/spec/parse/snapshots/unary_precedence_not_or.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(a: bool, b: bool) {
    let result = !a || b;
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "a",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "bool",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 12,
                            byte_length: 4,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
            Binding {
                pattern: Identifier {
                    identifier: "b",
                    span: Span {
                        file_id: 0,
                        byte_offset: 18,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "bool",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 21,
                            byte_length: 4,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "result",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 35,
                                    byte_length: 6,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Binary {
                            operator: Or,
                            left: Unary {
                                operator: Not,
                                expression: Identifier {
                                    value: "a",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 45,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 44,
                                    byte_length: 2,
                                },
                            },
                            right: Identifier {
                                value: "b",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 50,
                                    byte_length: 1,
                                },
                                resolution: Unresolved,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 44,
                                byte_length: 7,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 31,
                            byte_length: 20,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 27,
                    byte_length: 27,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 53,
        },
    },
]
