tests/spec/parse/snapshots/value_enum_negative.snap
---
source: tests/spec/parse/mod.rs
description: "input: \nenum Offset {\n  Start = 0,\n  End = -1,\n}\n"
---
[
    ValueEnum {
        doc: None,
        name: "Offset",
        name_span: Span {
            file_id: 0,
            byte_offset: 6,
            byte_length: 6,
        },
        underlying_ty: None,
        variants: [
            ValueEnumVariant {
                doc: None,
                name: "Start",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 17,
                    byte_length: 5,
                },
                value: Integer {
                    value: 0,
                    text: Some(
                        "0",
                    ),
                },
                value_span: Span {
                    file_id: 0,
                    byte_offset: 23,
                    byte_length: 3,
                },
            },
            ValueEnumVariant {
                doc: None,
                name: "End",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 30,
                    byte_length: 3,
                },
                value: Integer {
                    value: 18446744073709551615,
                    text: Some(
                        "-1",
                    ),
                },
                value_span: Span {
                    file_id: 0,
                    byte_offset: 34,
                    byte_length: 4,
                },
            },
        ],
        visibility: Public,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 40,
        },
    },
]
