tests/spec/parse/snapshots/value_enum_string.snap
---
source: tests/spec/parse/mod.rs
description: "input: \nenum HttpMethod {\n  Get = \"GET\",\n  Post = \"POST\",\n  Put = \"PUT\",\n}\n"
---
[
    ValueEnum {
        doc: None,
        name: "HttpMethod",
        name_span: Span {
            file_id: 0,
            byte_offset: 6,
            byte_length: 10,
        },
        underlying_ty: None,
        variants: [
            ValueEnumVariant {
                doc: None,
                name: "Get",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 21,
                    byte_length: 3,
                },
                value: String(
                    "GET",
                ),
                value_span: Span {
                    file_id: 0,
                    byte_offset: 25,
                    byte_length: 7,
                },
            },
            ValueEnumVariant {
                doc: None,
                name: "Post",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 36,
                    byte_length: 4,
                },
                value: String(
                    "POST",
                ),
                value_span: Span {
                    file_id: 0,
                    byte_offset: 41,
                    byte_length: 8,
                },
            },
            ValueEnumVariant {
                doc: None,
                name: "Put",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 53,
                    byte_length: 3,
                },
                value: String(
                    "PUT",
                ),
                value_span: Span {
                    file_id: 0,
                    byte_offset: 57,
                    byte_length: 7,
                },
            },
        ],
        visibility: Public,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 66,
        },
    },
]
